# SISF

./: Dockerfile  Dockerfile.txt  LICENSE  README.md  docker-compose.yml  main_loop.py  oversight_app.py  pyproject.toml  requirements.txt
.dvc/: config
configs/: config.yaml  main_config.yaml
configs/experiment/: baseline_keyword_filter.yaml  baseline_no_defense.yaml  config.yaml  sisf_full_system.yaml
data/processed/: .gitignore  advbench_subset.csv.dvc  hh_rlhf_subset.csv.dvc
experiments/: run_experiment.py  run_learning_evaluation.py
notebooks/: 1_data_preparation.ipynb  2_adjudicator_validation.ipynb  4_results_visualization.ipynb
outputs/: Baseline_No_Defense_Evaluation_adversarial_20251026_180602.csv  Learning_Curve_Evaluation_20251105_025138.csv  SISF_Full_System_Evaluation_adversarial_20251024_235717.csv  SISF_Full_System_Evaluation_adversarial_20251028_121338.csv  SISF_Full_System_Evaluation_adversarial_20251030_080217.csv  bootstrapping_log_1000.txt
outputs/2025-10-23/15-13-15/.hydra/: hydra.yaml
outputs/2025-10-25/09-52-12/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-10-26/22-43-58/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-28/21-25-43/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-11-04/10-03-00/.hydra/: config.yaml  hydra.yaml
outputs/2025-11-04/10-58-27/.hydra/: hydra.yaml
outputs/2025-11-05/07-30-40/.hydra/: hydra.yaml
outputs/2025-11-05/07-39-01/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-11-05/10-59-24/.hydra/: config.yaml  hydra.yaml  overrides.yaml
sisf/: api.py  main_loop.py
sisf/components/: apa.py  psm.py  warden.py
sisf/utils/: config.py  policy_store.py
src/sisf/: api.py
src/sisf/components/: adjudicator.py  apa.py  psm.py  warden.py
src/sisf/schemas/: policies.py
src/sisf/utils/: policy_store.py
tests/: test_adjudicator.py  test_warden.py
(+1 files in other folders)
