[project]
name = "sisf"
version = "0.1.0"
description = ""
authors = [
    {name = "Tslater01",email = "tylerc.slater@calbaptist.edu"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi (>=0.118.3,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "torch (>=2.8.0,<3.0.0)",
    "transformers (>=4.57.0,<5.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "trl (>=0.23.1,<0.24.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "dvc[s3] (>=3.63.0,<4.0.0)",
    "streamlit (>=1.50.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
