# pyproject.toml
[tool.poetry]
name = "sisf"
version = "0.1.0"
description = "A reference implementation of the Self-Improving Safety Framework (SISF)."
authors = ["Tyler Slater <tyler.slater@example.com>"]
readme = "README.md"
requires-python = ">=3.12, <3.13"

[tool.poetry.dependencies]
fastapi = "^0.118.3"
uvicorn = "^0.37.0"
pydantic = "^2.12.0"
httpx = "^0.28.1"
torch = "^2.8.0"
transformers = "^4.57.0"
sentence-transformers = "^5.1.1"
trl = "^0.23.1"
pyyaml = "^6.0.3"
loguru = "^0.7.3"
scikit-learn = "^1.7.2"
pandas = "^2.3.3"
seaborn = "^0.13.2"
hydra-core = "^1.3.2"
"dvc[s3]" = "^3.63.0"
streamlit = "^1.50.0"
openai = "^1.37.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
ruff = "^0.6.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]